dix: ignore non-pointer events in XineramaCheckMotion (#20557)

Note that deviceKeyButtonPointer and keyButtonPointer have the same wire
layout, so we only need to check for event types.

X.Org Bug 20557 <http://bugs.freedesktop.org/show_bug.cgi?id=20557>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Signed-off-by: Keith Packard <keithp@keithp.com>